# mt-mesonet-satellite

./: .gitignore  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  pyproject.toml
data/: mesonet-aqua-download-MYD16A2-061-results.csv  mesonet-aqua-download-MYD17A2H-061-results.csv  mesonet-terra-download-MOD16A2-061-results.csv  mesonet-terra-download-MOD17A2H-061-results.csv
mt_mesonet_satellite/: Backfill.py  Clean.py  Geom.py  Neo4jConn.py  Product.py  Session.py  Task.py  __init__.py  to_db_format.py  update.py  utils.py
mt_mesonet_satellite/db/: Neo4jConn.py  init.cypher  init_db.py  to_db_format.py
neo4j/: Dockerfile  backup.sh  cronjob  entrypoint.sh  restore.txt  test.sh
processing/: cronjob  init_db.py  initialize.py  update.py
py_appeears/: Clean.py  __init__.py  process.py  update.py
src/: Clean.py  Geom.py  Product.py  Session.py  Task.py  appeears_auth.py  process.py  start_task.py  update.py
update/: Dockerfile  backfill.py  cronjob  initialize.py  station_record_dates.json  update.py
