[tool.poetry]
name = "mt-mesonet-satellite"
version = "0.1.0"
description = ""
authors = ["Colin Brust <colin.brust@mso.umt.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pandas = "^1.4.2"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipykernel = "^6.13.0"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
