[tool.poetry]
name = "mt_mesonet_satellite"
version = "0.1.0"
description = ""
authors = ["Colin Brust <colin.brust@mso.umt.edu>"]
license = "MIT"
packages = [
    { include = "mt_mesonet_satellite" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.27.1"
pandas = ">=2.0.0,<3.0.0"
numpy = "^1.22.4"
geopandas = "^0.10.2"
pyjanitor = "^0.23.1"
neo4j = "^4.4.4"
neo4j-driver = "^4.4.4"
python-dotenv = ">=1.0.0,<2.0.0"
loguru = "^0.6.0"
setuptools = "^80.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipykernel = "^6.13.0"
matplotlib = "^3.5.2"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-mock = "^3.8.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
